web/view/theme/spg/assets/spg-theme.css
/** Page Body **/

body.spg-theme {
    color: #000000;
    /* background-color: #EEE; */
    font-family: helvetica;
    max-width: 64em;
    margin: 0 auto;
}

body.layout-vertical.spg-theme {
    font-size: 3.1vw;
}
body.layout-vertical.spg-theme .hide-on-layout-vertical { display: none; }


body.layout-horizontal.spg-theme {
}
body.layout-horizontal.spg-theme .float-left-on-layout-horizontal {float: left;}
body.layout-horizontal.spg-theme .float-right-on-layout-horizontal {float: right;}

body.spg-theme > header {
    display: inline-block;
    margin-right: -6em;
}

body.spg-theme > header > a > img {
    width:18em;
    margin-bottom: -0.8em;
}


body.spg-theme > footer {
    font-size: small;
    text-align: center;
    padding: 3em;
    clear: both;
}

body.layout-horizontal.spg-theme section.content {
    margin-left: 12em;
}

body.spg-theme > hr.themed {
	border-width: 9px;
	border-color: #3d7694;
}

/** Messages **/

body.spg-theme span.error,
body.spg-theme span.info {
    font-size: x-large;
    display: inline-block;
    padding: 0.5em 1em;
    margin: 0.2em;
    border-radius: 0.8em;
    font-weight: bold;
    color: #003;
}

body.spg-theme .info { background: rgba(59, 117, 147, 0.53); }
body.spg-theme .error { background: rgba(147, 59, 59, 0.51); }
/** Site Menu **/

body.spg-theme nav.site-menu {
    float: right;
    margin-top: 0.3em;
    margin-right: 0.5em;
}

body.layout-vertical.spg-theme nav.site-menu {
    float: inherit;
    margin: 0.8em 0;
    text-align: center;
    font-size: 4vw;
}

body.spg-theme > nav.site-menu > a {
    display: inline-block;
    vertical-align: top;
    text-decoration: none;
    color: #1a3340;
    text-align: center;
    width: 7em;
    text-transform: uppercase;
    /* border: 1px outset #FFF; */
    /* margin-top: 2em; */
}


body.spg-theme > nav.site-menu > a.current {
    background-color: #EEE;
}

body.spg-theme > nav.site-menu > a > div.nav-icon:hover {
    background-image: url(img/nav_icons_hover.png);
}

body.spg-theme > nav.site-menu > a > div.nav-icon {
    background: url(img/nav_icons.png) -128px 0 no-repeat;
    width: 64px;
    height: 64px;
    display: inline-block;
    padding: 0 0;
    margin: 0 0;
    margin-top: 0.4em;
}
body.spg-theme > nav.site-menu > a > div.nav-login-icon {background-position: -128px -64px;}
body.spg-theme > nav.site-menu > a > div.nav-logout-icon {background-position: -192px -64px;}
/* body.spg-theme > nav.site-menu > a > div.nav_-ser-icon { background-position: -128px 0; } */
body.spg-theme > nav.site-menu > a > div.nav-home-icon {background-position: 0 0;}
body.spg-theme > nav.site-menu > a > div.nav-dashboard-icon {background-position: -64px 0;}
body.spg-theme > nav.site-menu > a > div.nav-signup-icon {background-position: -64px -64px;}
body.spg-theme > nav.site-menu > a > div.nav-charge-icon {background-position: 0 -64px;}


body.spg-theme .site-welcome-text {
    /* float: left; */
    display: inline-block;
    /* clear:both; */
    margin-right: 0.5em;
    margin-top: 1.7em;
    /* font-weight:bold; */
    font-style:italic;
    font-size: larger;
    line-height: 27px;
    color: #777;
}


/** Sub Menu **/

body.spg-theme .submenu-icon {/*     background: url(img/submenu_icons.png) -48px 0 no-repeat; */background: url(img/nav_icons.png) 0 0 no-repeat;background-position: top left;background-size: 128px 64px;width: 32px;height: 32px;margin: -4px 6px 0 0px;float: left;}
body.spg-theme .submenu-icon.submenu-icon-dashboard {background-position: 0 0;}
body.spg-theme .submenu-icon.submenu-icon-charge {background-position: 0 -32px;}
body.spg-theme .submenu-icon.submenu-icon-list { background-position: -32px 0; }
body.spg-theme .submenu-icon.submenu-icon-edit {background-position: -32px -32px;}
body.spg-theme .submenu-icon.submenu-icon-add {background-position: -64px -32px;}
body.spg-theme .submenu-icon.submenu-icon-view { background-position: -64px 0; }



/** Bread Crumbs **/

body.spg-theme .bread-crumbs {
    border-bottom: 2px solid #bcc5d1;
    padding: 0.2em 0.5em 0.0em 0.5em;
    margin: 0.5em;
    background-color: #bcc5d1;
    box-shadow: 0px 0px 4px #1b1b1b;
}
body.spg-theme .bread-crumbs a:hover {
    background-color: #b6ccda;
    font-weight: bold;
}

body.spg-theme .bread-crumbs a {
    text-decoration: none;
    color: #FFF;
    font-size: medium;
    text-transform: uppercase;
}


body.spg-theme .bread-crumbs a::after {
    content: ' |';
    color: #EEE;
}
body.spg-theme .bread-crumbs a:last-child:after {
    content: '';
}


body.spg-theme > article.themed {
    background-color: white;
    /* background: linear-gradient(141deg, #f6f9fc 0%, #ffffff 50%, #f6f9fc 74%); */
}

body.layout-vertical.spg-theme .bread-crumbs {
    margin: 0.3em 1em 1em 1em;
}



body.spg-theme nav.page-menu {
    float: left;
    margin: 0em 0.5em 1em 0.1em;
    /* max-width: 206px; */
}

body.layout-vertical.spg-theme nav.page-menu {
    float: inherit;
    margin: 0.6em;
}



/** Tables **/

body.spg-theme form.themed {
    /* background-color: #f0f4f6; */
    /* background-color: #FAFAFA; */
    /* border: 1px solid #d4e7ec; */
    border-radius: 0.6em;
    /* max-width: 800px; */
    /* background-image: url(img/bk/form.png); */
    background-repeat: repeat-x;
}

body.spg-theme form.themed a {
    text-decoration: none;
}

body.spg-theme form.themed > fieldset,
body.spg-theme fieldset.themed {
    border: 0px inset #d4e7ec;
    padding: 0.3em 0em 0.3em 0.2em;
    margin: 0 0.5em 0.5em 0.5em;
    min-width: 47%;
    /* min-height: 7em; */
    vertical-align: top;
    /* background-color: #FAFAFA; */
    border-radius: 4px;
    background: linear-gradient(-3deg, #ffffff 0%, #ffffff 60%, rgb(214, 223, 234) 100%);
    /* background-image: url(img/bk/fieldset.png); */
    background-repeat: repeat-x;
    overflow: hidden;
}


body.spg-theme form.themed > fieldset > legend,
body.spg-theme fieldset.themed > legend,
body.spg-theme legend.themed {
    font-weight: bolder;
    /* background: #d4e7ec; */
    /* border-radius: 10px; */
    /* padding: 0.5em 1em 0 1em; */
    /* border-bottom: 1px inset #b1ced6; */
    /* margin-left: -0.5em; */
    /* box-shadow: 0px 1px 4px #CCC; */
    /* border: 1px outset #FFF; */
    display: table-row;
}

body.spg-theme form.themed select,
body.spg-theme form.themed textarea,
body.spg-theme form.themed input {
    padding: 0.5em 0.6em;
    border-radius: 0.3em;
    border-width: 1px;
    /* margin: 0 0 0 1em; */
}
body.spg-theme form.themed select,
body.spg-theme form.themed input {
    max-width: 16em;
}

body.spg-theme form.themed select.large,
body.spg-theme form.themed input.large {
    padding: 0.5em 1em;
    border-radius: 0.3em;
    font-size: large;
}

body.spg-theme input[type=reset].themed,
body.spg-theme input[type=submit].themed,
body.spg-theme input.button-submit {
    /* background: url('img/bk/input.button.png') repeat-x; */
    margin: 0.3em 0.1em;
    min-width: 84px;
    text-align: left;
    border-width: 1px;
    border-radius: 1em;
    text-transform: uppercase;
    background-color: #3d7694;
    background: linear-gradient(0deg, #d4e7ec 0%, #fff 50%, #d4e7ec 100%);
    color: black;
    cursor: pointer;
    border-top: 1px solid #CCCCCC;
    border-right: 1px solid #adabab;
    border-bottom: 1px solid #adabab;
    border-left: 1px solid #CCCCCC;
    box-shadow: 2px 2px 4px #CCC;
    font-size: larger;
}

body.spg-theme a.button {
    text-decoration: none;
    padding: 0.8em;
    margin: 0 0 0.2em 0;
    display: block;
    color: #666;
    font-size: larger;
    border-radius: 0.6em;
    /*     text-align: right; */
}

body.spg-theme a.button {
/*     text-decoration: none;
    padding: 0.5em;
    margin: 0 0 0.3em 0;
    display: block;
    min-width: 170px;
    text-align: left;
    border-width: 1px;
    border-radius: 1em;
    text-transform: uppercase;
    background-color: #3d7694;
    color: #fff;
    border-top: 1px solid #CCCCCC;
    border-right: 1px solid #adabab;
    border-bottom: 1px solid #adabab;
    border-left: 1px solid #CCCCCC;
    box-shadow: 2px 2px 4px #CCC;
    font-size: larger; */
    /* background-image: url(img/bk/a.button.png); */
}

body.spg-theme a.button.small {
    min-width: 2em;
    font-size: small;
}
body.spg-theme a.button:hover {
    background-color: #d4e7ec;
    /* color: #ffffff; */
}
body.spg-theme a.button.current {
    background-color: #3b7593;
    font-weight: bold;
    color: #DDD;
}
body.spg-theme a.button[disabled] {
    color: gray;
    cursor: default;
}

body.layout-vertical.spg-theme a.button {/*     font-size: 1.5em; *//* display: block; */}


body.spg-theme table.themed {border-spacing: 0 0;margin: 0.5em 0.5em;/* min-width: 48%; */}

body.spg-theme table.themed > tbody > tr > th {
    background-color: #bcc5d1;
    color: #000;
    /* font-size: smaller; */
    /* padding: 0.0em 0.5em 0 0; */
    text-align: left;
    padding-left: 0.5em;
}

body.spg-theme table.themed > tbody > tr > td {
    padding: 0.3em 0 0.3em 0.6em;
    vertical-align: top;
    white-space: nowrap;
    overflow: hidden;
    /* text-align: center; */
}

body.spg-theme table.themed.small > tbody > tr > th,
body.spg-theme table.themed.small > tbody > tr > td {
    font-size: smaller;
    max-width: 5em;
}

body.spg-theme table.cell-borders {
}

body.spg-theme table.cell-borders > tbody > tr > td {
    border: 1px solid #AAA;
    padding: 1em;
}

body.spg-theme table.striped-rows > tbody > tr.row-even {
    background-color: rgba(61, 118, 148, 0.08);
}

body.spg-theme table.themed > tbody > tr:hover {
    background-color: #dce6ea;
}

body.spg-theme table.themed > tbody > tr {}


body.spg-theme table.themed > tbody > tr > th.name,
body.spg-theme table.themed > tbody > tr > td.name {
    /* text-align: right; */
    /* text-transform: uppercase; */
    font-size: small;
    padding: 0.5em 0 0.5em 0.5em;
    /* vertical-align: middle; */
    font-weight: bold;
}


body.spg-theme table.themed > tbody > tr > td.value {
    text-align: left;
    /* font-size: smaller; */
    padding: 0.5em 0.5em;
}

body.spg-theme table.themed > tbody > tr > td.name::after {
    content: ':';
    color: gray;
}

body.spg-theme table.themed > tbody > tr.required > td.name::before {
    content: '*';
    color: red;
}

body.spg-theme table.themed > tbody > tr.required > td.name {}




body.spg-theme .themed .alert {
    font-weight: bold;
    color: #0074af;
}



body.spg-theme h1,
body.spg-theme h2,
body.spg-theme h3,
body.spg-theme h4,
body.spg-theme h5,
body.spg-theme h6 {
    margin: 0.1em 0 1em 0;
    font-style: italic;
    padding: 0em 1em;
    font-weight: normal;
    font-size: large;
    color: #092282;
}

/** Pagination **/

fieldset.pagination {
}

.pagination a {
    padding: 0.2em;
    margin: 0.5em 0;
    min-width: 0.8em;
    display: inline-block;
    text-align: center;
    border-radius: 0.5em;
    background-color: #DDD;
}

.pagination a:hover {
    background-color: #BBB;
}
.pagination a:visited {
}

.pagination a.current {
    background-color: #AAA;
}

/** Printing **/

.show-on-print {
    display: none;
}

@media print
{
    .hide-on-print, .hide-on-print *
    {
        display: none !important;
    }

    .show-on-print {
        display: inherit;
    }

    .small-on-print {
        font-size: 8px;
    }

    body.layout-horizontal.spg-theme section.content {
        margin-left: 0;
    }
}

